# Kuweni-Humanoid-Robot-Head

./: README.md
Kuweni Workspace/humanoid_head/: .gitignore  README.md  modified_file.npz  nohup.out  shutdown.py
Kuweni Workspace/humanoid_head/src/custom_interfaces/: CMakeLists.txt  package.xml
Kuweni Workspace/humanoid_head/src/custom_interfaces/msg/: People.msg  PeopleArray.msg
Kuweni Workspace/humanoid_head/src/custom_interfaces/srv/: GivePeopleName.srv
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/: package.xml  setup.py
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/: add_persons.py  camera_test.py  camera_torch_test.py  conda_packages_list.txt  face_rec.py  face_recognize_active.py  face_recognize_active_move.py  face_recognize_active_per_ID.py  face_recognize_test.py  face_tracking.py  gpu_check.py  recognize.py  recognize_new.py  requirements.txt  stream_camera.py  tracking.py
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/Testing/: fps_logger.py  recognition_accuracy_logger.py  recognition_latency_logger.py  unknown_enrollment_logger.py
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/Testing/CSV/: unknown_enrollment_log.csv
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/datasets/face_features/: feature.npz  remove.py
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/face_detection/scrfd/: detector.py
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/face_detection/scrfd/weights/: scrfd_fp16.engine
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/face_recognition/arcface/weights/: Weights link.txt
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/face_tracking/config/: config_tracking.yaml
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/face_recognition_pkg/face_tracking/tracker/: iou_tracker.py  kalman_filter.py
Kuweni Workspace/humanoid_head/src/face_recognition_pkg/launch/: facerec.launch.py
Kuweni Workspace/humanoid_head/src/motor_cntrl_pkg/: package.xml  setup.cfg  setup.py
Kuweni Workspace/humanoid_head/src/ts_py_pkg/: package.xml  setup.cfg  (+1 more)
(+66 files in other folders)
