<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_recognition_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kuweni@todo.todo">kuweni</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <!-- <depend>cv2</depend>
  <depend>torch</depend>
  <depend>os</depend>
  <depend>time</depend>
  <depend>numpy</depend>
  <depend>threading</depend> -->
  <depend>sensor_msgs</depend>
  <!-- <depend>cv_bridge</depend>
  <depend>torchvision</depend> -->
  <depend>std_msgs</depend>
  <depend>custom_interfaces</depend>

  <!-- If publishing images -->
  <!-- <depend>image_transport</depend> -->

  <!-- Optional: YAML configuration -->
  <depend>python3-yaml</depend>

  <!-- Optional: If using threading explicitly -->
  <depend>python3</depend>

  <!-- Optional: OpenCV -->
  <!-- <depend>opencv-python</depend> -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
